--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,6 +96,9 @@ en:
       user:
         create: Sign Up
         update: Save Changes
+  date:
+    formats:
+      mon_day: "%b %-d"
   time:
     formats:
       short_date: "%B %-m, %Y"
@@ -140,6 +143,7 @@ en:
         success: "%{user}’s account was updated."
       become:
         success: You are now using Shuttle as %{user}. To return to your account, you must log out and log in again.
+        admin: You cannot become another administrator.
         admin: You cannot become another administrator.
   models:
     user:
