Add Cocoa/iOS Genstrings support
* Add an NSLocalizedString importer that scans for uses of the routine and
  imports them
* Better .find_by_ident methods for all classes that use idents
* Refactored printf-token-scanning into separate module

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -194,6 +194,8 @@ en:
       name: Ember.js
     erb:
       name: ERb file
+    ns_localized_string:
+      name: NSLocalizedString routine calls
     properties:
       name: Java .properties file
     ruby:
