an email will be sent to engineers who submitted commits to be translated, after translation is finished

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -244,3 +244,5 @@ en:
     commit:
       notify_translators:
         subject: "[Shuttle] New commit ready for translation"
+      notify_translation_finished:
+        subject: "[Shuttle] Finished translation of commit"
