--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,6 +114,8 @@ en:
       translation:
         create: Submit
         update: Save Changes
+      translation_unit:
+        update: Save Changes
       user:
         create: Sign Up
         update: Save Changes
@@ -166,6 +168,11 @@ en:
         success: You are now using Shuttle as %{user}. To return to your account, you must log out and log in again.
         admin: You cannot become another administrator.
         admin: You cannot become another administrator.
+    translation_units:
+      destroy:
+        success: "The translation unit was successfully deleted!"
+      update:
+        success: "The translation unit has been successfully updated!"
   models:
     user:
       name: "%{first} %{last}"
