Pseudo-translation front-end and pipes
Switch to generate changed to explicit listing as a locale
Pipe to populate changed to hook on Translation

--- a/config/locales/locales.en.yml
+++ b/config/locales/locales.en.yml
@@ -8189,7 +8189,7 @@ en:
           _END_: Scottish Standard English
         scouse:
           _END_: Scouse
-        pseudot:
+        pseudo:
           _END_: Pseudo-English
       ja:
         hepburn:
