Clarify: Taiwan is not a Province of China
Well it's a political and ISO 3166 problem. But anyway we don't recognize Taiwan as a Province of China, so it would be really nice to remove the suffix from Taiwan.  

More info here: 
http://www.change.org/petitions/iso-central-secretariat-change-the-present-taiwan-province-of-china-to-taiwan

--- a/config/locales/locales.en.yml
+++ b/config/locales/locales.en.yml
@@ -8444,8 +8444,8 @@ en:
       TR: Turkey
       TT: Trinidad and Tobago
       TV: Tuvalu
-      TW: Taiwan, Province of China
-      TZ: United Republic of Tanzania
+      TW: Taiwan
+      TZ: United Republic of Tanzani
       UA: Ukraine
       UG: Uganda
       UM: United States Minor Outlying Islands
