Fix accidentally typo

--- a/config/locales/locales.en.yml
+++ b/config/locales/locales.en.yml
@@ -8445,7 +8445,7 @@ en:
       TT: Trinidad and Tobago
       TV: Tuvalu
       TW: Taiwan
-      TZ: United Republic of Tanzani
+      TZ: United Republic of Tanzania
       UA: Ukraine
       UG: Uganda
       UM: United States Minor Outlying Islands
