--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -36,8 +36,8 @@ en:
       confirmed: Your account was successfully confirmed. You are now signed in.
     registrations:
       signed_up: Welcome! You have signed up successfully.
-      signed_up_but_unconfirmed: A message with a confirmation link has been sent to your email address. Please open the link to activate your account.
-      signed_up_but_inactive: You have signed up successfully. However, we could not sign you in because your account is not yet activated.
+      signed_up_but_unconfirmed: You have signed up successfully. However, we could not sign you in because your account is not yet activated.  Please wait for an administrator to activate your account.
+      signed_up_but_inactive: You have signed up successfully. However, we could not sign you in because your account is not yet activated.  Please wait for an administrator to activate your account.
       signed_up_but_locked: You have signed up successfully. However, we could not sign you in because your account is locked.
       updated: You updated your account successfully.
       update_needs_confirmation: You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address.
