--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,7 @@ en:
         repository_url: repository URL
         base_rfc5646_locale: source locale
         webhook_url: webhook URL
+        build_status_url: build status URL
         targeted_rfc5646_locales: targeted localizations
         skip_imports: Don’t use these importers
         only_importer_paths: Only search for strings under these paths using these importers
