Change issue priority to be nil instead of -1 if it's unprioritized.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -208,7 +208,7 @@ en:
     issue:
       unknown_user: "Unknown User"
       priority:
-        -1: Unprioritized
+        none: "Unprioritized"
         0: P0 (Show Stopper)
         1: P1 (Critical)
         2: P2 (Default)
