Catch Git::NotFoundErrors in workers and send email if CommitCreator, CommitImporter, BlobImporter or KeyCreator fails due to a sha not found in git repo.
If the error occurs in AutoImporter, it doesn't send an email. Once we have DRIs for each project, we can notify that person.

- Fixes https://jira.corp.squareup.com/browse/SHUTTLE-365
- Fixes https://jira.corp.squareup.com/browse/SHUTTLE-266

Conflicts:
	app/workers/auto_importer.rb
	app/workers/blob_importer.rb
	app/workers/key_creator.rb

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -307,6 +307,8 @@ en:
         subject: "[Shuttle] Finished translation of commit"
       notify_submitter_of_import_errors:
         subject: "[Shuttle] Error(s) occurred during the import"
+      notify_import_errors_in_commit_creator:
+        subject: "[Shuttle] Import Failed for sha: %{sha}"
     issue:
       issue_created:
         subject: "[Shuttle] %{name} reported a new issue. Issue Summary: %{summary}"
