--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,7 @@ en:
               not_translated: cannot be set when translation is pending
             copy:
               invalid_interpolations: has an invalid %{fencer} interpolation
+              unmatched_fences: fences do not match the source copy fences
         translation_unit:
           attributes:
             source_copy_sha_raw:
