Add a new issue type descriptor. Make summary and description optional Rearrange issue fields on the UI Rename kind to type only on the UI, not in the backend because type is a reserved word. Improved commit/issues page.
Fixes https://jira.corp.squareup.com/browse/SHUTTLE-397
Fixes https://jira.corp.squareup.com/browse/SHUTTLE-426

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -218,6 +218,7 @@ en:
       kind:
         1: Needs More Context
         2: Typo
+        7: Feature Not Relevant
         3: Code Syntax Issue
         4: Mistranslation
         5: Truncation
