--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -271,6 +271,8 @@ en:
       name: Ember.js
     ember_module:
       name: Ember.js (with dependency injection)
+    ember_es6_module:
+      name: Ember.js i18n ES6 (dependency-injected)
     erb:
       name: ERb file
     properties:
@@ -303,7 +305,9 @@ en:
     ember:
       name: Ember.js i18n file
     ember_module:
-        name: Ember.js i18n file (dependency injection)
+      name: Ember.js i18n file (dependency injection)
+    ember_es6_module:
+      name: Ember.js i18n ES6 (dependency-injected)
     erb:
       name: ERb file
     ios:
