--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -154,6 +154,13 @@ en:
       translator_required: You must be a translator to do that.
       reviewer_required: You must be a reviewer to do that.
       admin_required: You must be an administrator to do that.
+    home:
+      commits:
+        header: Commits
+      articles:
+        header: Articles
+      groups:
+        header: Article Groups
     commits:
       blank_repository_url: This project does not have a repository url. This action only applies to projects that have a repository.
       create:
@@ -233,6 +240,12 @@ en:
         reviewer: reviewer
         admin: administrator
     article:
+      priority:
+        0: P0
+        1: P1
+        2: P2
+        3: P3
+    group:
       priority:
         0: P0
         1: P1
