--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -166,6 +166,8 @@ en:
         header: Commits
       articles:
         header: Articles
+      assets:
+        header: Assets
       groups:
         header: Article Groups
     assets:
@@ -260,7 +262,7 @@ en:
         0: P0
         1: P1
         2: P2
-        3: P3  
+        3: P3
     asset:
       priority:
         0: P0
